Cinquè commit modificar_usuario.php

--- a/deployment.properties
+++ b/deployment.properties
@@ -4,4 +4,6 @@ appdir.includes = composer.lock,\
 		vendor,\
 		login.php,\
 		menu.php,\
-		crear_usuario.php
+		crear_usuario.php,\
+		modificar_usuario.php,\
+		auth.php
