Sisè commit borrar_usuario.php

--- a/deployment.properties
+++ b/deployment.properties
@@ -6,4 +6,5 @@ appdir.includes = composer.lock,\
 		menu.php,\
 		crear_usuario.php,\
 		modificar_usuario.php,\
-		auth.php
+		auth.php,\
+		borrar_usuario.php
