Fix tornar menú

--- a/deployment.properties
+++ b/deployment.properties
@@ -7,4 +7,5 @@ appdir.includes = composer.lock,\
 		crear_usuario.php,\
 		modificar_usuario.php,\
 		auth.php,\
-		borrar_usuario.php
+		borrar_usuario.php,\
+		visualizar_usuario.php
